get section-buttons to autosize to for columns

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,11 @@ body {
   max-width: 800px;
 }
 
+.section_button {
+  height: auto;
+  white-space: normal;
+}
+
 .header {
   margin-top: 6rem;
   text-align: center;
