--- a/css/custom.css
+++ b/css/custom.css
@@ -2,9 +2,43 @@ body {
   background-color: #558000;
 }
 
-.hidden {
-  display: none;
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    /* transition: 0.4s; */
 }
+
+.active, .accordion:hover {
+    background-color: #ccc;
+}
+
+.accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
 
 .container {
   max-width: 800px;
@@ -39,10 +73,9 @@ body {
 }
 
 .docs-section {
-  border-top: 1px solid #eee;
-  padding: 4rem 0;
+  /* border-top: 1px solid #eee; */
+  /* padding: 4rem 0; */
   margin-bottom: 0;
-  transition: display 1s ease 1s;
 }
 
 .value-img {
@@ -149,7 +182,7 @@ body {
     margin-bottom: 1.5rem;
   }
   .docs-section {
-    padding: 6rem 0;
+    /* padding: 6rem 0; */
   }
   .example-send-yourself-copy {
     float: right;
