--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -171,13 +171,13 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 38px;
+  /* height: 38px; */
   padding: 0 30px;
   color: #555;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
-  line-height: 38px;
+  /* line-height: 38px; */
   letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -339,7 +339,8 @@ td:last-child {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 button,
 .button {
-  margin-bottom: 1rem; }
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem; }
 input,
 textarea,
 select,
